<resources>
    <string name="app_name">CommuterSafety</string>
    <string name="app_name2">Commuter\nSafety</string>
    <string name="welcome_text">Welcome to Commuter\nSafety</string>
    <string name="tag_line">Your safety is our concern</string>
    <string name="login_text_btn">LOGIN</string>
    <string name="register_text_btn">REGISTER</string>
    <string name="tnc">By creating new account,you agree to our
\nTerms of Services &amp; Privacy Policy</string>
    <string name="or_log_in">Or log in with</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_back_sub">Please login to your account</string>
    <string name="email_hint">Email or phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_account">Dont\'t have an account</string>
    <string name="have_account">Already Registered ?</string>
    <string name="register_now">Register Now</string>
    <string name="login_now">Login Now</string>
    <string name="back">Back</string>
    <string name="register_new">Register New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="title_activity_maps">Map</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>


    <!--    phone AUNTHENTICATION-->

    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>

    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>

    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>

    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>

    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>

    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>

    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>

    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>

    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="label_generic_idp">Generic IDP Auth</string>

    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>

    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>

    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>

    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>

    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>

    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>

    <string name="msft_status_fmt">Microsoft User: %s</string>
    <string name="id_fmt">User ID: %s</string>

    <string name="email_fmt">Email: %s</string>
    <string-array name="unsafezone">
        <item>Potholes</item>
        <item>Man Holes</item>
        <item>Live Wires</item>
        <item>Others</item>
    </string-array>


    <string-array name="loc1">
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
        <item>LOCATION</item>
    </string-array>

    <string-array name="area">
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
        <item>AREA</item>
    </string-array>

    <string-array name="time">
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
        <item>12:45</item>
    </string-array>

</resources>
